using System.ComponentModel.DataAnnotations;

namespace SE_StA_API.DataObject {
    public class Cash {
        [Key]
        public int CashId { get; set; }

        public int PaymentMethod { get; internal set; }

    }
}