export interface Hotel {
  hotelId: number,
  contactId: number,
  name: string,
  stars: number
}
