---
title: Classes
---
%%{init:{"theme":"dark","themeVariables":{"primaryColor":"white","classText":"white","primaryTextColor":"white","primaryBorderColor":"white","lineColor":"red","secondaryColor":"black","tertiaryColor":"white"}}}%%

classDiagram
direction LR
class AspNetRoleClaims {
	+Id : int
	+RoleId : string
	+ClaimType : string
	+ClaimValue : string
}
class AspNetRoles {
	+Id : string
	+Name : string [256]
	+NormalizedName : string [256]
	+ConcurrencyStamp : string
}
class AspNetUserClaims {
	+Id : int
	+UserId : string
	+ClaimType : string
	+ClaimValue : string
}
class AspNetUserLogins {
	+LoginProvider : string
	+ProviderKey : string
	+ProviderDisplayName : string
	+UserId : string
}
class AspNetUserRoles {
	+UserId : string
	+RoleId : string
}
class AspNetUserTokens {
	+UserId : string
	+LoginProvider : string
	+Name : string
	+Value : string
}
class AspNetUsers {
	+Id : string
	+UserName : string
	+NormalizedUserName : string
	+Email : string
	+EmailConfirmed : boolean
	+PasswordHash : string
	+SecurityStamp : string
	+ConcurrencyStamp : string
	+PhoneNumber : string
	+PhoneNumberConfirmed : boolean
	+TwoFactorEnabled : boolean
	+LockoutEnd : string
	+LockoutEnabled : boolean
	+AccessFailedCount : int
}

class Address {
	+AddressId : int [PK]
	+CountryId : int [FK]
	+TimezoneId : int [FK]
	+Street : string
	+HouseNumber : string
	+PostalCode : string
	+Town : string
	+AddressAddition : string
}
class BankAccount {
	+BankAccountId : int [PK]
	+PaymentMethodId : int [FK]
	+Iban : string
}
class Booking {
	+BookingId : int [PK]
	+CustomerId : int [FK]
	+InvoiceId : int [FK]
	+PaymentMethodId : int [FK]
	+StatusId : int [FK]
	+Number : string
	+Date : Datetime
	+/TotalPrice : double
}
class BookingPositionRoom {
	+BookingPositionRoomId : int [PK]
	+RoomId : int [FK]
	+BookingId : int [FK]
	+Date : Datetime
	+Price : double
}
class BookingPositionService {
	+BookingPositionServiceId : int [PK]
	+ServiceId : int [FK]
	+BookingId : int [FK]
	+DateTime : Datetime
	+Price : double
}
class Cash {
	+CashId : int [PK]
	+PaymentMethodId : int [FK]
}
class Contact {
	+ContactId : int [PK]
	+Salutation : string
	+Phone : string
}
class Contact_Address {
	+ContactId : int [PK][FK]
	+AddressId : int [PK][FK]
}
class Country {
	+CountryId : int [PK]
	+Name : string
	+Language : string
	+Iso2 : string
}
class Country_Timezone {
	+CountryId : int [PK][FK]
	+TimezoneId : int [PK][FK]
}
class CreditCard {
	+CreditCardId : int [PK]
	+PaymentMethodId : int [FK]
	+CardNumber : string
}
class Customer {
	+CustomerId : int [PK]
	+ContactId : int [FK]
	+UserId : int [FK]
	+Number : string
	+FirstName : string
	+LastName : string
	+DateOfBirth : Datetime
}
class Flight {
	+FlightId : int [PK]
	+ServiceId : int [FK]
	+FlightNumber : string
	+Destination : string
}
class Hotel {
	+HotelId : int [PK]
	+ContactId : int [FK]
	+Name : string
	+Stars : int
}
class Invoice {
	+InvoiceId : int [PK]
	+Number : string
}
class PaymentMethod {
	+PaymentMethodId : int [PK]
	+CustomerId : int [FK]
}
class RentalCar {
	+RentalCarId : int [PK]
	+ServiceId : int [FK]
	+CarModel : string
	+Seats : string
}
class Room {
	+RoomId : int [PK]
	+HotelId : int [FK]
	+RoomTypeId : int [FK]
	+RoomNumber : string
}
class RoomType {
	+RoomTypeId: int [PK]
	+Name : string
	+DefaultPrice : double
	+PersonsCount : int
}
class Service {
	+ServiceId : int [PK]
	+ServiceTypeId : int [FK]
}
class ServiceType {
	+ServiceTypeId : int [PK]
	+Name : string
	+DefaultPrice : double
}
class Status {
	+StatusId : int [PK]
	+Name : string
}
class Timezone {
	+TimeZoneId : int [PK]
	+Name : string
	+DifUtc : int
}
class Wellness {
	+WellnessId : int [PK]
	+ServiceId : int [FK]
	+Name : string
	+Duration : string
}

AspNetRoleClaims "*" --> "1" AspNetRoles : RoleId
AspNetUserClaims "*" --> "1" AspNetUsers : UserId
AspNetUserLogins "*" --> "1" AspNetUsers : UserId
AspNetUserRoles "*" --> "1" AspNetRoles : RoleId
AspNetUserRoles "*" --> "1" AspNetUsers : UserId
AspNetUserTokens "*" --> "1" AspNetUsers : UserId

Address "*" --> "1" Country : CountryId
Address "*" --> "1" Timezone : TimezoneId
BankAccount "*" --> "1" PaymentMethod : PaymentMethodId
Booking "*" --> "1" Customer : CustomerId
Booking "1" --> "1" Invoice : InvoiceId
Booking "*" --> "1" PaymentMethod : PaymentMethodId
Booking "*" --> "1" Status : StatusId
BookingPositionRoom "1..10" --> "1" Booking : BookingId
BookingPositionRoom "*" --> "1" Room : RoomId
BookingPositionService "*" --> "1" Booking : BookingId
BookingPositionService "*" --> "1" Service : ServiceId
Cash "*" --> "1" PaymentMethod : PaymentMethodId
Contact_Address "*" --> "1" Address : AddressId
Contact_Address "*" --> "1" Contact : ContactId
Country_Timezone "*" --> "1" Country : CountryId
Country_Timezone "*" --> "1" Timezone : TimezoneId
CreditCard "*" --> "1" PaymentMethod : PaymentMethodId
Customer "1" --> "1" AspNetUsers : UserId
Customer "1" --> "1" Contact : ContactId
Flight "*" --> "1" Service : ServiceId
Hotel "1" --> "1" Contact : ContactId
PaymentMethod "*" --> "1" Customer : CustomerId
RentalCar "*" --> "1" Service : ServiceId
Room "*" --> "1" Hotel : HotelId
Room "*" --> "1" RoomType : RoomTypeId
Service "*" --> "1" ServiceType : ServiceTypeId
Wellness "*" --> "1" Service : ServiceId